--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Get current date
         id: date
-        run: echo "::set-output name=date::$(date +'%Y-%m-%d %H:%M')"
+        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
 
       - name: Build and push Docker image
         id: docker_build
@@ -45,13 +45,8 @@ jobs:
           file: ./Dockerfile
           push: true
           platforms: ${{ matrix.architecture }}
-          build_args:
-            LDFLAGS: |
-              -s -X github.com/prometheus/common/version.Version=${{ github.ref_name }}
-              -X github.com/prometheus/common/version.Revision=${{ github.sha }}
-              -X github.com/prometheus/common/version.Branch=${{ github.ref_name }}
-              -X github.com/prometheus/common/version.BuildUser=${{ github.triggering_actor }}
-              -X github.com/prometheus/common/version.BuildDate=${{ steps.date.outputs.date }}
+          build-args: |
+            LDFLAGS=-s -X github.com/prometheus/common/version.Version=${{ github.ref_name }} -X github.com/prometheus/common/version.Revision=${{ github.sha }} -X github.com/prometheus/common/version.Branch=${{ github.ref_name }} -X github.com/prometheus/common/version.BuildUser=${{ github.triggering_actor }} -X github.com/prometheus/common/version.BuildDate=${{ steps.date.outputs.date }}
           tags: |
             ghcr.io/${{ github.repository_owner }}/freeswitch-exporter:${{ github.sha }}
             ghcr.io/${{ github.repository_owner }}/freeswitch-exporter:latest-${{ matrix.architecture }}
